fix: prevent the alignment breakage from inherited text-align style #880

--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -42,6 +42,7 @@
 
 :host{
   position: relative;
+  text-align: left;
 
   &::part(counterControl) {
     display: flex;
