--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -30,6 +30,7 @@
 
 :host {
   display: inline-block;
+  text-align: left;
 }
 
 :host([layout*='emphasized']),
